--- a/locale/de-DE/treestyletab/treestyletab.properties
+++ b/locale/de-DE/treestyletab/treestyletab.properties
@@ -57,3 +57,12 @@ closeTabsToTheEnd_vertical_accesskey=b
 
 migration.treeNeverRevoked.title=Die Zweigfunktionen von Tree Style Tab sind jetzt immer aktiviert!
 migration.treeNeverRevoked.text=Hinweis: Einige Einstellungen um Zweigfunktionen dauerhaft zu deaktivieren sind jetzt aus Tree Style Tab verschwunden. Wenn nur eine vertikale Tableiste ohne Zweigfunktionen ben\u00F6tigt wird, sollte ein alternatives Add-on wie zum Beispiel "Vertical Tabs", "Side Tabs" oder andere verwendet werden.
+
+
+migration.configsSaved.choose=Choose a file to export migration data
+migration.configsSaved.title=Migration Data for Configuration is Successfully Exported
+migration.configsSaved.text=Migration data for configuration is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
+
+migration.treeSaved.choose=Choose a file to save migration data
+migration.treeSaved.title=Migration Data for Tree is Successfully Exported
+migration.treeSaved.text=Migration data for tree is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
