--- a/locale/es-ES/treestyletab/treestyletab.dtd
+++ b/locale/es-ES/treestyletab/treestyletab.dtd
@@ -168,6 +168,10 @@
 <!ENTITY config.bookmarkDroppedTabs.all     "Agregar a marcadores todas las pestañas del árbol">
 <!ENTITY config.bookmarkDroppedTabs.parent  "Marcar sólo la pestaña arrastrada">
 
+<!ENTITY config.migration.caption "Migration for Future Versions">
+<!ENTITY config.migration.saveConfigs "Save Migration Data for Configurations to file">
+<!ENTITY config.migration.saveTree "Save Migration Data for Tree to file">
+
 
 
 
