--- a/locale/fr-FR/treestyletab/treestyletab.properties
+++ b/locale/fr-FR/treestyletab/treestyletab.properties
@@ -57,3 +57,12 @@ closeTabsToTheEnd_vertical_accesskey=b
 
 migration.treeNeverRevoked.title=La fonctionnalité d'arborescence de Tree Style Tab est désormais obligatoire !
 migration.treeNeverRevoked.text=Note: Quelques options pour désactiver les fonctionnalités d'arborescence sont maintenant supprimées définitivement de Tree Style Tab. Si vous avez juste besoin d'une barre d'onglets verticale sans fonction d'arborescence, veuillez envisager de passer à un addon alternatif comme "Vertical Tabs", "Side Tabs", ou autres.
+
+
+migration.configsSaved.choose=Choose a file to export migration data
+migration.configsSaved.title=Migration Data for Configuration is Successfully Exported
+migration.configsSaved.text=Migration data for configuration is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
+
+migration.treeSaved.choose=Choose a file to save migration data
+migration.treeSaved.title=Migration Data for Tree is Successfully Exported
+migration.treeSaved.text=Migration data for tree is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
