--- a/locale/gr-EL/treestyletab/treestyletab.properties
+++ b/locale/gr-EL/treestyletab/treestyletab.properties
@@ -57,3 +57,12 @@ closeTabsToTheEnd_vertical_accesskey=b
 
 migration.treeNeverRevoked.title=Τα χαρακτηριστικά δέντρου του Tree Style Tab είναι τώρα ενεργοποιημένα υποχρεωτικά!
 migration.treeNeverRevoked.text=Σημείωση: Μερικές προτιμήσεις για απενεργοποίηση χαρακτηριστικών του δέντρου τώρα μόνιμα εξαφανίστηκαν από το Tree Style Tab. Αν απλά θέλετε μια κατακόρυφη λωρίδα καρτέλων χωρίς χαρακτηριστικά δέντρου, τότε παρακαλώ μεταβείτε σε κάποιο εναλλακτικό πρόσθετο π.χ. "Vertical Tabs", "Side Tabs", ή άλλα.
+
+
+migration.configsSaved.choose=Choose a file to export migration data
+migration.configsSaved.title=Migration Data for Configuration is Successfully Exported
+migration.configsSaved.text=Migration data for configuration is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
+
+migration.treeSaved.choose=Choose a file to save migration data
+migration.treeSaved.title=Migration Data for Tree is Successfully Exported
+migration.treeSaved.text=Migration data for tree is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
