--- a/locale/ja/treestyletab/treestyletab.properties
+++ b/locale/ja/treestyletab/treestyletab.properties
@@ -57,3 +57,12 @@ closeTabsToTheEnd_vertical_accesskey=b
 
 migration.treeNeverRevoked.title=ツリー型タブのツリー表示が強制的に有効化されました
 migration.treeNeverRevoked.text=注意：ツリー型タブからツリー表示を無効化するためのいくつかの設定が廃止されました。ツリー表示を常時無効化して縦型のタブバーのみを利用したい場合には、「Vertical Tabs」「Side Tabs」などの代替アドオンを利用して下さい。
+
+
+migration.configsSaved.choose=移行用データの保存先を指定してください
+migration.configsSaved.title=設定の移行用データが保存されました
+migration.configsSaved.text=設定の移行用データがファイルに保存されました。ファイルを開いて内容をクリップボードにコピーし、新しいバージョンのツリー型タブの設定画面に貼り付けてください。
+
+migration.treeSaved.choose=移行用データの保存先を指定してください
+migration.treeSaved.title=ツリー情報の移行用データが保存されました
+migration.treeSaved.text=ツリー情報の移行用データがファイルに保存されました。ファイルを開いて内容をクリップボードにコピーし、新しいバージョンのツリー型タブの設定画面に貼り付けてください。
