--- a/locale/ru/treestyletab/treestyletab.properties
+++ b/locale/ru/treestyletab/treestyletab.properties
@@ -57,3 +57,12 @@ closeTabsToTheEnd_vertical_accesskey=ж
 
 migration.treeNeverRevoked.title=Функции дерева Tree Style Tab были принудительно включены!
 migration.treeNeverRevoked.text=Примечание: настройки для полного отключения функций дерева были удалены из Tree Style Tab. Если вам нужны только вертикальные вкладки без свойств дерева, пожалуйста, воспользуйтесь альтернативным дополнением, например, "Vertical Tabs", "Side Tabs" или другим.
+
+
+migration.configsSaved.choose=Choose a file to export migration data
+migration.configsSaved.title=Migration Data for Configuration is Successfully Exported
+migration.configsSaved.text=Migration data for configuration is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
+
+migration.treeSaved.choose=Choose a file to save migration data
+migration.treeSaved.title=Migration Data for Tree is Successfully Exported
+migration.treeSaved.text=Migration data for tree is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
