--- a/locale/pl/treestyletab/treestyletab.properties
+++ b/locale/pl/treestyletab/treestyletab.properties
@@ -66,3 +66,12 @@ closeTabsToTheEnd_vertical_accesskey=b
 
 migration.treeNeverRevoked.title=Tree features of Tree Style Tab is now activated mandatorily!
 migration.treeNeverRevoked.text=Note: Some preferences to disable tree features permanently now disappeared from Tree Style Tab. If you just require only a vertical tab bar without tree features, then please switch to an alternative addon e.g. "Vertical Tabs", "Side Tabs", or others.
+
+
+migration.configsSaved.choose=Choose a file to export migration data
+migration.configsSaved.title=Migration Data for Configuration is Successfully Exported
+migration.configsSaved.text=Migration data for configuration is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
+
+migration.treeSaved.choose=Choose a file to save migration data
+migration.treeSaved.title=Migration Data for Tree is Successfully Exported
+migration.treeSaved.text=Migration data for tree is successfully exported to the specified file. Copy its contents to the clipboard and paste to the input field in the configurations of a future version of Tree Style Tab.
