Add tootip for container tab button

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -16,6 +16,7 @@
       "count": { "content": "$2", "example": "3" }
     }},
   "tabbar.newTabButton.tooltip": { "message": "Open a new tab" },
+  "tabbar.newTabWithContexualIdentity.tooltip": { "message": "New Container Tab" },
 
   "groupTab.label": { "message": "$TITLE$ and more",
     "placeholders": {
