--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -106,6 +106,10 @@
 
   "config.treeBehavior.caption": { "message": "ツリーの挙動" },
 
+  "config.parentTabBehaviorForChanges.caption": { "message": "親のタブがツリー以外の場所から移動または閉じられた場合" },
+  "config.parentTabBehaviorForChanges.always": { "message": "常に親として扱い、配下のタブも併せて移動または閉じる" },
+  "config.parentTabBehaviorForChanges.onlyWhenVisible": { "message": "サイドバーが表示されている時だけ親として扱う" },
+
   "config.autoCollapseExpandSubtreeOnAttach.label": { "message": "新しいツリーが作られた時は、自動的に他のツリーを折り畳む" },
   "config.autoCollapseExpandSubtreeOnSelect.label": { "message": "タブを切り替えた時は、フォーカスされたタブのツリーを自動的に展開して、他のツリーを折り畳む" },
   "config.autoCollapseExpandSubtreeOnSelectExceptCurrentTabRemove.label": { "message": "現在のタブを閉じてタブのフォーカスが切り替わった場合を除く" },
