--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -169,6 +169,8 @@
   "config.maximumAcceptableDelayForTabDuplication.before": { "message": "" },
   "config.maximumAcceptableDelayForTabDuplication.after": { "message": "ミリ秒以内にタブの複製を完了できなかった場合は処理を中断する" },
 
+  "config.all.caption": { "message": "すべての設定" },
+
 
   "tabContextMenu.reload.label":      { "message": "タブを再読み込み" },
   "tabContextMenu.mute.label":        { "message": "タブをミュート" },
