--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -109,6 +109,11 @@
   "config.insertNewChildAt.first": { "message": "Insert to the top of the tree, as the first child" },
   "config.insertNewChildAt.last": { "message": "Append to the last of the tree" },
 
+  "config.insertNewTabFromPinnedTabAt.caption": { "message": "Insertion position of new tabs from pinned tabs" },
+  "config.insertNewTabFromPinnedTabAt.noControl": { "message": "No control (respect the decision by Firefox or other tab addons)" },
+  "config.insertNewTabFromPinnedTabAt.first": { "message": "Insert to the top of the tree, as the first child" },
+  "config.insertNewTabFromPinnedTabAt.last": { "message": "Append to the last of the tree" },
+
   "config.autoGroupNewTabs.before": { "message": "Auto-group tabs opened within" },
   "config.autoGroupNewTabs.after": { "message": "msec" },
 
