--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -128,6 +128,7 @@
   "config.autoCollapseExpandSubtreeOnSelect.label": { "message": "When a tab gets focus, expand its tree and collapse others automatically" },
   "config.autoCollapseExpandSubtreeOnSelectExceptCurrentTabRemove.label": { "message": "Except focus moving caused by current tab closing" },
   "config.autoExpandOnAttached.label": { "message": "Expand tree automatically, when tabs are inserted into the tree" },
+  "config.collapseExpandSubtreeByDblClick.label": { "message": "Double-click on a tab to collapse/expand tree" },
 
   "config.closeParentBehavior.caption": { "message": "When a parent tab is closed" },
   "config.closeParentBehavior.close": { "message": "Close child tabs too" },
