--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -66,6 +66,7 @@
 
   "config.style.caption": { "message": "Theme" },
   "config.style.plain": { "message": "Plain" },
+  "config.style.plain-dark": { "message": "Plain Dark" },
   "config.style.flat": { "message": "Flat" },
   "config.style.vertigo": { "message": "Vertigo" },
   "config.style.mixed": { "message": "Mixed" },
