Update zh_CN locale for WebExtension

--- a/webextensions/_locales/zh_CN/messages.json
+++ b/webextensions/_locales/zh_CN/messages.json
@@ -3,6 +3,7 @@
   "extensionDescription": { "message": "树状显示标签页。" },
 
   "sidebarTitle": { "message": "Tree Style Tab" },
+  "sidebarToggleDescription": { "message": "切换“Tree Style Tab”侧栏" },
 
   "tab.closebox.tab.tooltip": { "message": "关闭标签页" },
   "tab.closebox.tree.tooltip": { "message": "关闭树" },
@@ -30,13 +31,24 @@
     }},
   "bookmarkFolder.label.default": { "message": "已加书签的树" },
 
-  "bookmarkTree.notification.title": { "message": "已成功将树加为书签" },
+  "bookmarkTree.notification.title": { "message": "成功为树添加书签" },
   "bookmarkTree.notification.message": { "message": "包括“$TITLE$”在内的 $COUNT$ 个标签页已添加为“$PARENT$”下的书签文件夹",
     "placeholders": {
       "title": { "content": "$1", "example": "Title" },
       "count": { "content": "$2", "example": "2" },
       "parent": { "content": "$3", "example": "Parent Folder" }
     }},
+
+
+  "bookmarkTabs.notification.title": { "message": "成功为标签页添加书签" },
+  "bookmarkTabs.notification.message": { "message": "$COUNT$ 个标签页（包括“$TITLE$”）已加为书签，新文件夹位于“$PARENT$”。",
+    "placeholders": {
+      "title": { "content": "$1", "example": "Title" },
+      "count": { "content": "$2", "example": "2" },
+      "parent": { "content": "$3", "example": "Parent Folder" }
+    }},
+
+  "message.updatedFromLegacy.description": { "message": "Tree Style Tab 目前基于 WebExtensions 技术以支持 Firefox 57 及后续版本。它提供一个侧栏以作为可选用的垂直标签栏。如果您没看到，按“F1”键或单击工具栏中的“Tree Style Tab”按钮来激活 Tree Style Tab 侧栏面板。" },
 
 
   "context.reloadTree.label": { "message": "重新载入此树" },
@@ -57,6 +69,7 @@
 
   "config.style.caption": { "message": "主题" },
   "config.style.plain": { "message": "朴素" },
+  "config.style.plain-dark": { "message": "朴素暗" },
   "config.style.flat": { "message": "平坦" },
   "config.style.vertigo": { "message": "眩晕" },
   "config.style.mixed": { "message": "错综" },
@@ -65,6 +78,8 @@
 
   "config.maxTreeLevel.before": { "message": "缩进标签页，最多" },
   "config.maxTreeLevel.after": { "message": "层（负值则为无限）" },
+
+  "config.faviconizePinnedTabs.label": { "message": "已固定标签页只显示图标" },
 
   "config.animation.label": { "message": "启用动画效果" },
 
@@ -80,6 +95,8 @@
   "config.autoAttachOnNewTabCommand.sibling": { "message": "当前标签页的同级节点" },
   "config.autoAttachOnNewTabCommand.nextSibling": { "message": "当前标签页的下方（同级）" },
   "config.autoAttachOnNewTabCommand.after": { "message": "" },
+  "config.guessNewOrphanTabAsOpenedByNewTabCommandUrl.before": { "message": "新标签页带有下列网址时，猜测它是通过“新建标签页”命令（例如键盘快捷键）打开：" },
+  "config.guessNewOrphanTabAsOpenedByNewTabCommandUrl.after": { "message": "" },
 
   "config.autoAttachOnNewTabButtonMiddleClick.before": { "message": "中键单击“新建标签页”按钮时，新建空白标签页为" },
   "config.autoAttachOnNewTabButtonMiddleClick.independent": { "message": "一个独立的标签页" },
@@ -100,16 +117,26 @@
   "config.insertNewChildAt.first": { "message": "插入到树的顶端，作为其首个子标签页" },
   "config.insertNewChildAt.last": { "message": "放在树的最后" },
 
+  "config.insertNewTabFromPinnedTabAt.caption": { "message": "从固定标签页打开的新标签页插入在" },
+  "config.insertNewTabFromPinnedTabAt.noControl": { "message": "不控制（尊重 Firefox 或其他标签页扩展的决定）" },
+  "config.insertNewTabFromPinnedTabAt.first": { "message": "插入到树的顶端，作为其首个子标签页" },
+  "config.insertNewTabFromPinnedTabAt.last": { "message": "放在树的最后" },
+
   "config.autoGroupNewTabs.before": { "message": "" },
   "config.autoGroupNewTabs.after": { "message": "毫秒后自动分组打开的标签页" },
 
 
   "config.treeBehavior.caption": { "message": "树行为" },
 
+  "config.parentTabBehaviorForChanges.caption": { "message": "当一个父标签页被树外部事物移动或关闭时" },
+  "config.parentTabBehaviorForChanges.always": { "message": "始终视作对父级的行为。移动或关闭所有子标签页。" },
+  "config.parentTabBehaviorForChanges.onlyWhenVisible": { "message": "仅在树边栏可见的情况下视作对父级的行为。" },
+
   "config.autoCollapseExpandSubtreeOnAttach.label": { "message": "新树展开时，自动折叠其他树" },
   "config.autoCollapseExpandSubtreeOnSelect.label": { "message": "标签页获得焦点时，自动展开该树并折叠其他树" },
   "config.autoCollapseExpandSubtreeOnSelectExceptCurrentTabRemove.label": { "message": "排除当前标签页关闭引发的焦点改变" },
   "config.autoExpandOnAttached.label": { "message": "标签页插入树时，自动展开该树" },
+  "config.collapseExpandSubtreeByDblClick.label": { "message": "双击标签页折叠/展开树" },
 
   "config.closeParentBehavior.caption": { "message": "父标签页关闭时" },
   "config.closeParentBehavior.close": { "message": "关闭子标签页" },
@@ -153,5 +180,23 @@
   "config.maximumAcceptableDelayForTabDuplication.before": { "message": "中止复制标签页，如果按住超过" },
   "config.maximumAcceptableDelayForTabDuplication.after": { "message": "毫秒。" },
 
-  "config.all.caption": { "message": "所有配置" }
+  "config.all.caption": { "message": "所有配置" },
+
+
+  "tabContextMenu.reload.label":      { "message": "重新载入标签页" },
+  "tabContextMenu.mute.label":        { "message": "静音标签页" },
+  "tabContextMenu.unmute.label":      { "message": "取消静音标签页" },
+
+  "tabContextMenu.pin.label":         { "message": "固定标签页" },
+  "tabContextMenu.unpin.label":       { "message": "取消固定标签页" },
+  "tabContextMenu.duplicate.label":   { "message": "创建标签页副本" },
+  "tabContextMenu.tearOff.label":     { "message": "移动到新窗口" },
+
+  "tabContextMenu.reloadAll.label":   { "message": "重新载入所有标签页" },
+  "tabContextMenu.bookmarkAll.label": { "message": "为全部标签页添加书签…" },
+  "tabContextMenu.closeAfter.label":  { "message": "关闭右侧标签页" },
+  "tabContextMenu.closeOther.label":  { "message": "关闭其他标签页" },
+
+  "tabContextMenu.undoClose.label":   { "message": "撤销关闭标签页" },
+  "tabContextMenu.close.label":       { "message": "关闭标签页" }
 }
