--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -129,8 +129,8 @@
 
   "config.treeBehavior.caption": { "message": "ツリーの挙動" },
 
-  "config.parentTabBehaviorForChanges.caption": { "message": "親のタブがツリー以外の場所から移動または閉じられた場合" },
-  "config.parentTabBehaviorForChanges.always": { "message": "常に親として扱い、配下のタブも併せて移動または閉じる" },
+  "config.parentTabBehaviorForChanges.caption": { "message": "親のタブがツリー以外の場所から移動されたり閉じられたりした場合" },
+  "config.parentTabBehaviorForChanges.always": { "message": "常に親として扱い、配下のタブも併せて移動するか閉じる" },
   "config.parentTabBehaviorForChanges.onlyWhenVisible": { "message": "サイドバーが表示されている時だけ親として扱う" },
 
   "config.autoCollapseExpandSubtreeOnAttach.label": { "message": "新しいツリーが作られた時は、自動的に他のツリーを折り畳む" },
